// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`structured presenter and responsive Fabric renderer > characterises the current activity view frame before renderer decomposition 1`] = `
{
  "hitRegions": [
    {
      "enabled": true,
      "id": "view:attention",
      "kind": "tab",
      "rect": {
        "x1": 1,
        "x2": 6,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:project",
      "kind": "tab",
      "rect": {
        "x1": 8,
        "x2": 13,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:runs",
      "kind": "tab",
      "rect": {
        "x1": 15,
        "x2": 20,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:work",
      "kind": "tab",
      "rect": {
        "x1": 22,
        "x2": 27,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:agents",
      "kind": "tab",
      "rect": {
        "x1": 29,
        "x2": 36,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:evidence",
      "kind": "tab",
      "rect": {
        "x1": 38,
        "x2": 43,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:activity",
      "kind": "tab",
      "rect": {
        "x1": 45,
        "x2": 50,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:system",
      "kind": "tab",
      "rect": {
        "x1": 52,
        "x2": 56,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "row:activity:activity-group-1",
      "kind": "row",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 5,
        "y2": 5,
      },
    },
    {
      "enabled": true,
      "id": "splitter:master-detail",
      "kind": "splitter",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 12,
        "y2": 12,
      },
    },
    {
      "enabled": true,
      "id": "detach",
      "kind": "detach",
      "rect": {
        "x1": 73,
        "x2": 80,
        "y1": 24,
        "y2": 24,
      },
    },
  ],
  "mode": "reference",
  "rows": [
    "P:project-1       |S:session-1     |R:AFAB-004    |r11                  |LIVE   ",
    "Phase:implement          |Owner:codex-chair  |Health:blocked    |Attn:1 |Runs:1 ",
    "Next:Console GREEN                                  |Capacity:tasks:3+1/8       ",
    "1:Attn 2:Proj 3:Runs 4:Work 5:Agents 6:Evid 7:Act* 8:Sys                        ",
    "    Review decision context | task | x3 | source 11-13 | task:task-1 | LIVE 5s ~",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "==== DETAIL ====                                                                ",
    ">Detail: Select an item to inspect canonical facts.                             ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "Actions: select an actionable item                                              ",
    "V:activity F:browse LIVE r11 MOUSE:OFF DROP:0                                   ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open          q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > characterises the current agents view frame before renderer decomposition 1`] = `
{
  "hitRegions": [
    {
      "enabled": true,
      "id": "view:attention",
      "kind": "tab",
      "rect": {
        "x1": 1,
        "x2": 6,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:project",
      "kind": "tab",
      "rect": {
        "x1": 8,
        "x2": 13,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:runs",
      "kind": "tab",
      "rect": {
        "x1": 15,
        "x2": 20,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:work",
      "kind": "tab",
      "rect": {
        "x1": 22,
        "x2": 27,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:agents",
      "kind": "tab",
      "rect": {
        "x1": 29,
        "x2": 37,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:evidence",
      "kind": "tab",
      "rect": {
        "x1": 39,
        "x2": 44,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:activity",
      "kind": "tab",
      "rect": {
        "x1": 46,
        "x2": 50,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:system",
      "kind": "tab",
      "rect": {
        "x1": 52,
        "x2": 56,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "row:agents:codex-chair",
      "kind": "row",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 5,
        "y2": 5,
      },
    },
    {
      "enabled": true,
      "id": "splitter:master-detail",
      "kind": "splitter",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 12,
        "y2": 12,
      },
    },
    {
      "enabled": true,
      "id": "detach",
      "kind": "detach",
      "rect": {
        "x1": 73,
        "x2": 80,
        "y1": 24,
        "y2": 24,
      },
    },
  ],
  "mode": "reference",
  "rows": [
    "P:project-1       |S:session-1     |R:AFAB-004    |r11                  |LIVE   ",
    "Phase:implement          |Owner:codex-chair  |Health:blocked    |Attn:1 |Runs:1 ",
    "Next:Console GREEN                                  |Capacity:tasks:3+1/8       ",
    "1:Attn 2:Proj 3:Runs 4:Work 5:Agents* 6:Evid 7:Act 8:Sys                        ",
    "    chair | working | context medium | LIVE 5s | r7                             ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "==== DETAIL ====                                                                ",
    ">Detail: Select an item to inspect canonical facts.                             ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "Actions: select an actionable item                                              ",
    "V:agents F:browse LIVE r11 MOUSE:OFF DROP:0                                     ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open          q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > characterises the current attention view frame before renderer decomposition 1`] = `
{
  "hitRegions": [
    {
      "enabled": true,
      "id": "view:attention",
      "kind": "tab",
      "rect": {
        "x1": 1,
        "x2": 7,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:project",
      "kind": "tab",
      "rect": {
        "x1": 9,
        "x2": 14,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:runs",
      "kind": "tab",
      "rect": {
        "x1": 16,
        "x2": 21,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:work",
      "kind": "tab",
      "rect": {
        "x1": 23,
        "x2": 28,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:agents",
      "kind": "tab",
      "rect": {
        "x1": 30,
        "x2": 37,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:evidence",
      "kind": "tab",
      "rect": {
        "x1": 39,
        "x2": 44,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:activity",
      "kind": "tab",
      "rect": {
        "x1": 46,
        "x2": 50,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:system",
      "kind": "tab",
      "rect": {
        "x1": 52,
        "x2": 56,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "row:attention:attention:safety",
      "kind": "row",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 6,
        "y2": 6,
      },
    },
    {
      "enabled": true,
      "id": "deck:coordination:session-1:AFAB-004",
      "kind": "row",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 9,
        "y2": 9,
      },
    },
    {
      "enabled": true,
      "id": "detail:attention:attention:safety",
      "kind": "pager",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 10,
        "y2": 19,
      },
    },
    {
      "enabled": true,
      "id": "detach",
      "kind": "detach",
      "rect": {
        "x1": 73,
        "x2": 80,
        "y1": 24,
        "y2": 24,
      },
    },
  ],
  "mode": "reference",
  "rows": [
    "P:project-1       |S:session-1     |R:AFAB-004    |r11                  |LIVE   ",
    "Phase:implement          |Owner:codex-chair  |Health:blocked    |Attn:1 |Runs:1 ",
    "Next:Console GREEN                                  |Capacity:tasks:3+1/8       ",
    "1:Attn* 2:Proj 3:Runs 4:Work 5:Agents 6:Evid 7:Act 8:Sys                        ",
    "NEEDS YOU:1 | WATCH:1 collapsed                                                 ",
    "*!! Approve quarantine recovery | Approval | safety-integrity | notify stale/am~",
    "WATCH latest: Routine evaluation complete | LIVE 5s                             ",
    "PROJECTED ROSTER:1 | RUN IDENTITIES:1                                           ",
    "    COORDINATION AFAB-004 | SESSION session-1 | BLOCKED | owner:agent-chair | p~",
    "Native notification: stale | journal ambiguous                                  ",
    "Notification basis: integration available | delivery r7 | claim g3 | observed 2~",
    "ID: attention:safety                                                            ",
    "Revision: 7                                                                     ",
    "Kind: attention                                                                 ",
    "Summary: Approve quarantine recovery                                            ",
    "State: Approval | safety-integrity | notify stale/ambiguous                     ",
    "Source: fabric                                                                  ",
    "Freshness: LIVE 5s                                                              ",
    "Actions: resume                                                                 ",
    "                                                                                ",
    "                                                                                ",
    "Actions: select an actionable item                                              ",
    "V:attention F:browse LIVE r11 MOUSE:OFF DROP:0                                  ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open          q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > characterises the current evidence view frame before renderer decomposition 1`] = `
{
  "hitRegions": [
    {
      "enabled": true,
      "id": "view:attention",
      "kind": "tab",
      "rect": {
        "x1": 1,
        "x2": 6,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:project",
      "kind": "tab",
      "rect": {
        "x1": 8,
        "x2": 13,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:runs",
      "kind": "tab",
      "rect": {
        "x1": 15,
        "x2": 20,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:work",
      "kind": "tab",
      "rect": {
        "x1": 22,
        "x2": 27,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:agents",
      "kind": "tab",
      "rect": {
        "x1": 29,
        "x2": 36,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:evidence",
      "kind": "tab",
      "rect": {
        "x1": 38,
        "x2": 44,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:activity",
      "kind": "tab",
      "rect": {
        "x1": 46,
        "x2": 50,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:system",
      "kind": "tab",
      "rect": {
        "x1": 52,
        "x2": 56,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "row:evidence:evidence-1",
      "kind": "row",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 5,
        "y2": 5,
      },
    },
    {
      "enabled": true,
      "id": "splitter:master-detail",
      "kind": "splitter",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 12,
        "y2": 12,
      },
    },
    {
      "enabled": true,
      "id": "detach",
      "kind": "detach",
      "rect": {
        "x1": 73,
        "x2": 80,
        "y1": 24,
        "y2": 24,
      },
    },
  ],
  "mode": "reference",
  "rows": [
    "P:project-1       |S:session-1     |R:AFAB-004    |r11                  |LIVE   ",
    "Phase:implement          |Owner:codex-chair  |Health:blocked    |Attn:1 |Runs:1 ",
    "Next:Console GREEN                                  |Capacity:tasks:3+1/8       ",
    "1:Attn 2:Proj 3:Runs 4:Work 5:Agents 6:Evid* 7:Act 8:Sys                        ",
    "    test | pass | native harness | LIVE 5s | r7                                 ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "==== DETAIL ====                                                                ",
    ">Detail: Select an item to inspect canonical facts.                             ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "Actions: select an actionable item                                              ",
    "V:evidence F:browse LIVE r11 MOUSE:OFF DROP:0                                   ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open          q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > characterises the current project view frame before renderer decomposition 1`] = `
{
  "hitRegions": [
    {
      "enabled": true,
      "id": "view:attention",
      "kind": "tab",
      "rect": {
        "x1": 1,
        "x2": 6,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:project",
      "kind": "tab",
      "rect": {
        "x1": 8,
        "x2": 14,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:runs",
      "kind": "tab",
      "rect": {
        "x1": 16,
        "x2": 21,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:work",
      "kind": "tab",
      "rect": {
        "x1": 23,
        "x2": 28,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:agents",
      "kind": "tab",
      "rect": {
        "x1": 30,
        "x2": 37,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:evidence",
      "kind": "tab",
      "rect": {
        "x1": 39,
        "x2": 44,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:activity",
      "kind": "tab",
      "rect": {
        "x1": 46,
        "x2": 50,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:system",
      "kind": "tab",
      "rect": {
        "x1": 52,
        "x2": 56,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "row:project:project-1",
      "kind": "row",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 5,
        "y2": 5,
      },
    },
    {
      "enabled": true,
      "id": "splitter:master-detail",
      "kind": "splitter",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 12,
        "y2": 12,
      },
    },
    {
      "enabled": true,
      "id": "detach",
      "kind": "detach",
      "rect": {
        "x1": 73,
        "x2": 80,
        "y1": 24,
        "y2": 24,
      },
    },
  ],
  "mode": "reference",
  "rows": [
    "P:project-1       |S:session-1     |R:AFAB-004    |r11                  |LIVE   ",
    "Phase:implement          |Owner:codex-chair  |Health:blocked    |Attn:1 |Runs:1 ",
    "Next:Console GREEN                                  |Capacity:tasks:3+1/8       ",
    "1:Attn 2:Proj* 3:Runs 4:Work 5:Agents 6:Evid 7:Act 8:Sys                        ",
    "    Ship the project Console | scope unaccepted | repository c2fc623 | LIVE 5s ~",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "==== DETAIL ====                                                                ",
    ">Detail: Select an item to inspect canonical facts.                             ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "Actions: select an actionable item                                              ",
    "V:project F:browse LIVE r11 MOUSE:OFF DROP:0                                    ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open          q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > characterises the current runs view frame before renderer decomposition 1`] = `
{
  "hitRegions": [
    {
      "enabled": true,
      "id": "view:attention",
      "kind": "tab",
      "rect": {
        "x1": 1,
        "x2": 6,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:project",
      "kind": "tab",
      "rect": {
        "x1": 8,
        "x2": 13,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:runs",
      "kind": "tab",
      "rect": {
        "x1": 15,
        "x2": 21,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:work",
      "kind": "tab",
      "rect": {
        "x1": 23,
        "x2": 28,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:agents",
      "kind": "tab",
      "rect": {
        "x1": 30,
        "x2": 37,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:evidence",
      "kind": "tab",
      "rect": {
        "x1": 39,
        "x2": 44,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:activity",
      "kind": "tab",
      "rect": {
        "x1": 46,
        "x2": 50,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:system",
      "kind": "tab",
      "rect": {
        "x1": 52,
        "x2": 56,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "row:runs:AFAB-004",
      "kind": "row",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 5,
        "y2": 5,
      },
    },
    {
      "enabled": true,
      "id": "splitter:master-detail",
      "kind": "splitter",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 12,
        "y2": 12,
      },
    },
    {
      "enabled": true,
      "id": "detach",
      "kind": "detach",
      "rect": {
        "x1": 73,
        "x2": 80,
        "y1": 24,
        "y2": 24,
      },
    },
  ],
  "mode": "reference",
  "rows": [
    "P:project-1       |S:session-1     |R:AFAB-004    |r11                  |LIVE   ",
    "Phase:implement          |Owner:codex-chair  |Health:blocked    |Attn:1 |Runs:1 ",
    "Next:Console GREEN                                  |Capacity:tasks:3+1/8       ",
    "1:Attn 2:Proj 3:Runs* 4:Work 5:Agents 6:Evid 7:Act 8:Sys                        ",
    "    session-1 | implement | coordination | blocked | next Console GREEN | progr~",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "==== DETAIL ====                                                                ",
    ">Detail: Select an item to inspect canonical facts.                             ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "Actions: select an actionable item                                              ",
    "V:runs F:browse LIVE r11 MOUSE:OFF DROP:0                                       ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open          q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > characterises the current system view frame before renderer decomposition 1`] = `
{
  "hitRegions": [
    {
      "enabled": true,
      "id": "view:attention",
      "kind": "tab",
      "rect": {
        "x1": 1,
        "x2": 6,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:project",
      "kind": "tab",
      "rect": {
        "x1": 8,
        "x2": 13,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:runs",
      "kind": "tab",
      "rect": {
        "x1": 15,
        "x2": 20,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:work",
      "kind": "tab",
      "rect": {
        "x1": 22,
        "x2": 27,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:agents",
      "kind": "tab",
      "rect": {
        "x1": 29,
        "x2": 36,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:evidence",
      "kind": "tab",
      "rect": {
        "x1": 38,
        "x2": 43,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:activity",
      "kind": "tab",
      "rect": {
        "x1": 45,
        "x2": 49,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:system",
      "kind": "tab",
      "rect": {
        "x1": 51,
        "x2": 56,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "row:system:github",
      "kind": "row",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 5,
        "y2": 5,
      },
    },
    {
      "enabled": true,
      "id": "splitter:master-detail",
      "kind": "splitter",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 12,
        "y2": 12,
      },
    },
    {
      "enabled": true,
      "id": "detach",
      "kind": "detach",
      "rect": {
        "x1": 73,
        "x2": 80,
        "y1": 24,
        "y2": 24,
      },
    },
  ],
  "mode": "reference",
  "rows": [
    "P:project-1       |S:session-1     |R:AFAB-004    |r11                  |LIVE   ",
    "Phase:implement          |Owner:codex-chair  |Health:blocked    |Attn:1 |Runs:1 ",
    "Next:Console GREEN                                  |Capacity:tasks:3+1/8       ",
    "1:Attn 2:Proj 3:Runs 4:Work 5:Agents 6:Evid 7:Act 8:Sys*                        ",
    "    integration | healthy | optional GitHub adapter | LIVE 5s | r7              ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "==== DETAIL ====                                                                ",
    ">Detail: Select an item to inspect canonical facts.                             ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "Actions: select an actionable item                                              ",
    "V:system F:browse LIVE r11 MOUSE:OFF DROP:0                                     ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open          q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > characterises the current work view frame before renderer decomposition 1`] = `
{
  "hitRegions": [
    {
      "enabled": true,
      "id": "view:attention",
      "kind": "tab",
      "rect": {
        "x1": 1,
        "x2": 6,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:project",
      "kind": "tab",
      "rect": {
        "x1": 8,
        "x2": 13,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:runs",
      "kind": "tab",
      "rect": {
        "x1": 15,
        "x2": 20,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:work",
      "kind": "tab",
      "rect": {
        "x1": 22,
        "x2": 28,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:agents",
      "kind": "tab",
      "rect": {
        "x1": 30,
        "x2": 37,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:evidence",
      "kind": "tab",
      "rect": {
        "x1": 39,
        "x2": 44,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:activity",
      "kind": "tab",
      "rect": {
        "x1": 46,
        "x2": 50,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "view:system",
      "kind": "tab",
      "rect": {
        "x1": 52,
        "x2": 56,
        "y1": 4,
        "y2": 4,
      },
    },
    {
      "enabled": true,
      "id": "row:work:task-1",
      "kind": "row",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 5,
        "y2": 5,
      },
    },
    {
      "enabled": true,
      "id": "splitter:master-detail",
      "kind": "splitter",
      "rect": {
        "x1": 1,
        "x2": 80,
        "y1": 12,
        "y2": 12,
      },
    },
    {
      "enabled": true,
      "id": "detach",
      "kind": "detach",
      "rect": {
        "x1": 73,
        "x2": 80,
        "y1": 24,
        "y2": 24,
      },
    },
  ],
  "mode": "reference",
  "rows": [
    "P:project-1       |S:session-1     |R:AFAB-004    |r11                  |LIVE   ",
    "Phase:implement          |Owner:codex-chair  |Health:blocked    |Attn:1 |Runs:1 ",
    "Next:Console GREEN                                  |Capacity:tasks:3+1/8       ",
    "1:Attn 2:Proj 3:Runs 4:Work* 5:Agents 6:Evid 7:Act 8:Sys                        ",
    "    active | checks passing | LIVE 5s | r7                                      ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "==== DETAIL ====                                                                ",
    ">Detail: Select an item to inspect canonical facts.                             ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "                                                                                ",
    "Actions: select an actionable item                                              ",
    "V:work F:browse LIVE r11 MOUSE:OFF DROP:0                                       ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open          q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > keeps Needs you and the projected-run roster visible at 30x6 1`] = `
{
  "mode": "strip",
  "rows": [
    "project-1 NEEDS 1 RUNS 1 !    ",
    "*!! Approve quarantine recove~",
    "AFAB-004 implement BLOCKED 5s ",
    "session-1 active ACTIVE       ",
    " ?  workstream-1 active UNAVA~",
    "[enter]open          [q]Detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > keeps Needs you and the projected-run roster visible at 80x24 1`] = `
{
  "mode": "reference",
  "rows": [
    "P:project-1       |S:session-1     |R:AFAB-004    |r11                  |LIVE   ",
    "Phase:implement          |Owner:codex-chair  |Health:blocked    |Attn:1 |Runs:1 ",
    "Next:Console GREEN                                  |Capacity:tasks:3+1/8       ",
    "1:Attn* 2:Proj 3:Runs 4:Work 5:Agents 6:Evid 7:Act 8:Sys                        ",
    "NEEDS YOU:1 | WATCH:1 collapsed                                                 ",
    "*!! Approve quarantine recovery | Approval | safety-integrity | notify stale/am~",
    "WATCH latest: Routine evaluation complete | LIVE 5s                             ",
    "PROJECTED ROSTER:3 | RUN IDENTITIES:2                                           ",
    "    SESSION session-1 | ACTIVE | mode:coordinated | state:active | last event:2~",
    "    COORDINATION AFAB-004 | BLOCKED | owner:agent-chair | phase:implement | hea~",
    " ?  WORKSTREAM workstream-1 | DELIVERY delivery-1 | UNAVAILABLE | owner:deliver~",
    "Native notification: stale | journal ambiguous                                  ",
    "Notification basis: integration available | delivery r7 | claim g3 | observed 2~",
    "ID: attention:safety                                                            ",
    "Revision: 7                                                                     ",
    "Kind: attention                                                                 ",
    "Summary: Approve quarantine recovery                                            ",
    "State: Approval | safety-integrity | notify stale/ambiguous                     ",
    "Source: fabric                                                                  ",
    "Freshness: LIVE 5s                                                              ",
    "Actions: resume                                                                 ",
    "Actions: select an actionable item                                              ",
    "V:attention F:browse LIVE r11 MOUSE:OFF DROP:0                                  ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open          q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > keeps Needs you and the projected-run roster visible at 120x32 1`] = `
{
  "mode": "wide",
  "rows": [
    "P:project-1               |S:session-1             |R:AFAB-004            |r11                          |LIVE           ",
    "Phase:implement                  |Owner:codex-chair          |Health:blocked            |Attn:1         |Runs:1         ",
    "Next:Console GREEN                                                      |Capacity:tasks:3+1/8                           ",
    "1:Attn* 2:Proj 3:Runs 4:Work 5:Agents 6:Evid 7:Act 8:Sys                                                                ",
    "NEEDS YOU:1 | WATCH:1 collapsed                   |PROJECTED ROSTER:3 | RUN IDENTITIES:2                                ",
    "*!! Approve quarantine recovery | Approval | safe~|    SESSION session-1 | ACTIVE | mode:coordinated | state:active | l~",
    "WATCH latest: Routine evaluation complete | LIVE ~|    COORDINATION AFAB-004 | BLOCKED | owner:agent-chair | phase:impl~",
    "                                                  | ?  WORKSTREAM workstream-1 | DELIVERY delivery-1 | UNAVAILABLE | ow~",
    "                                                  |Native notification: stale | journal ambiguous                       ",
    "                                                  |Notification basis: integration available | delivery r7 | claim g3 |~",
    "                                                  |ID: attention:safety                                                 ",
    "                                                  |Revision: 7                                                          ",
    "                                                  |Kind: attention                                                      ",
    "                                                  |Summary: Approve quarantine recovery                                 ",
    "                                                  |State: Approval | safety-integrity | notify stale/ambiguous          ",
    "                                                  |Source: fabric                                                       ",
    "                                                  |Freshness: LIVE 5s                                                   ",
    "                                                  |Actions: resume                                                      ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "Actions: select an actionable item                                                                                      ",
    "V:attention F:browse LIVE r11 MOUSE:OFF DROP:0                                                                          ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open                                                  q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > keeps Needs you and the projected-run roster visible at 200x10 1`] = `
{
  "mode": "compact",
  "rows": [
    "P:project-1                               |S:session-1                             |R:AFAB-004                            |r11                                          |LIVE                           ",
    "Phase:implement                                  |Owner:codex-chair                          |Health:blocked                            |Attn:1                         |Runs:1                         ",
    "Next:Console GREEN                                                                                              |Capacity:tasks:3+1/8                                                                   ",
    "1:Attn* 2:Proj 3:Runs 4:Work 5:Agents 6:Evid 7:Act 8:Sys                                                                                                                                                ",
    "NEEDS YOU:1 | WATCH:1 collapsed                       |PROJECTED ROSTER:3 | RUN IDENTITIES:2                                                                                                            ",
    "*!! Approve quarantine recovery | Approval | safety-i~|    SESSION session-1 | ACTIVE | mode:coordinated | state:active | last event:2026-07-11T12:00:00.000Z                                           ",
    "WATCH latest: Routine evaluation complete | LIVE 5s   |    COORDINATION AFAB-004 | BLOCKED | owner:agent-chair | phase:implement | health:blocked | fresh:LIVE 5s | last event:2026-07-11T12:00:00.000Z~",
    "Actions: select an actionable item                                                                                                                                                                      ",
    "V:attention F:browse LIVE r11 MOUSE:OFF DROP:0                                                                                                                                                          ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open                                                                                                                                  q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > keeps the two-cell urgency gutter legible at 30x6 1`] = `
{
  "mode": "strip",
  "rows": [
    "project-1 NEEDS 5 RUNS 1 !    ",
    "*!! Safety gate 5s            ",
    " !> Critical blocker 5s       ",
    " !  Authority expires 5s      ",
    " ~  run-degraded review DEGRA~",
    "[enter]open          [q]Detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > keeps the two-cell urgency gutter legible at 80x24 1`] = `
{
  "mode": "reference",
  "rows": [
    "P:project-1       |S:session-1     |R:AFAB-004    |r11                  |LIVE   ",
    "Phase:implement          |Owner:codex-chair  |Health:blocked    |Attn:5 |Runs:1 ",
    "Next:Console GREEN                                  |Capacity:tasks:3+1/8       ",
    "1:Attn* 2:Proj 3:Runs 4:Work 5:Agents 6:Evid 7:Act 8:Sys                        ",
    "NEEDS YOU:5 | WATCH:0 collapsed                                                 ",
    "*!! Safety gate | Approval | safety-integrity | notify stale/ambiguous | LIVE 5~",
    " !> Critical blocker | Approval | critical-path | notify stale/ambiguous | LIVE~",
    " !  Authority expires | Approval | expiring-authority | notify stale/ambiguous ~",
    " +  Acceptance ready | Approval | acceptance-ready | notify stale/ambiguous | L~",
    " ?  Stale safety gate | Approval | safety-integrity | notify stale/ambiguous | ~",
    "PROJECTED ROSTER:6 | RUN IDENTITIES:3                                           ",
    " ~  SESSION session-degraded | DEGRADED | mode:coordinated | state:visibility_d~",
    " ~  COORDINATION run-degraded | DEGRADED | owner:agent-chair | phase:review | h~",
    "    SESSION session-healthy | ACTIVE | mode:coordinated | state:active | last e~",
    "    COORDINATION run-healthy | HEALTHY | owner:agent-chair | phase:build | heal~",
    " ?  SESSION session-stale | UNAVAILABLE | mode:coordinated | state:recovery_req~",
    " ?  COORDINATION run-stale | STALE | owner:agent-chair | phase:verify | health:~",
    "Native notification: stale | journal ambiguous                                  ",
    "Notification basis: integration available | delivery r7 | claim g3 | observed 2~",
    "ID: attention:safety                                                            ",
    "Revision: 7                                                                     ",
    "Actions: select an actionable item                                              ",
    "V:attention F:browse LIVE r11 MOUSE:OFF DROP:0                                  ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open          q detach",
  ],
}
`;

exports[`structured presenter and responsive Fabric renderer > keeps the two-cell urgency gutter legible at 120x32 1`] = `
{
  "mode": "wide",
  "rows": [
    "P:project-1               |S:session-1             |R:AFAB-004            |r11                          |LIVE           ",
    "Phase:implement                  |Owner:codex-chair          |Health:blocked            |Attn:5         |Runs:1         ",
    "Next:Console GREEN                                                      |Capacity:tasks:3+1/8                           ",
    "1:Attn* 2:Proj 3:Runs 4:Work 5:Agents 6:Evid 7:Act 8:Sys                                                                ",
    "NEEDS YOU:5 | WATCH:0 collapsed                   |PROJECTED ROSTER:6 | RUN IDENTITIES:3                                ",
    "*!! Safety gate | Approval | safety-integrity | n~| ~  SESSION session-degraded | DEGRADED | mode:coordinated | state:v~",
    " !> Critical blocker | Approval | critical-path |~| ~  COORDINATION run-degraded | DEGRADED | owner:agent-chair | phase~",
    " !  Authority expires | Approval | expiring-autho~|    SESSION session-healthy | ACTIVE | mode:coordinated | state:acti~",
    " +  Acceptance ready | Approval | acceptance-read~|    COORDINATION run-healthy | HEALTHY | owner:agent-chair | phase:b~",
    " ?  Stale safety gate | Approval | safety-integri~| ?  SESSION session-stale | UNAVAILABLE | mode:coordinated | state:r~",
    "                                                  | ?  COORDINATION run-stale | STALE | owner:agent-chair | phase:verif~",
    "                                                  |Native notification: stale | journal ambiguous                       ",
    "                                                  |Notification basis: integration available | delivery r7 | claim g3 |~",
    "                                                  |ID: attention:safety                                                 ",
    "                                                  |Revision: 7                                                          ",
    "                                                  |Kind: attention                                                      ",
    "                                                  |Summary: Safety gate                                                 ",
    "                                                  |State: Approval | safety-integrity | notify stale/ambiguous          ",
    "                                                  |Source: fabric                                                       ",
    "                                                  |Freshness: LIVE 5s                                                   ",
    "                                                  |Actions: resume                                                      ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "                                                  |                                                                     ",
    "Actions: select an actionable item                                                                                      ",
    "V:attention F:browse LIVE r11 MOUSE:OFF DROP:0                                                                          ",
    "? help | / filter | p pin | s sessions | [ ] view | Enter open                                                  q detach",
  ],
}
`;
